# ACT-lib

./: .eeg_analyzer_history.txt  .gitignore  .gitmodules  ACT.cpp  ACT.h  ACT_Accelerate.cpp  ACT_Accelerate.h  ACT_Benchmark.cpp  ACT_Benchmark.h  ACT_CPU.cpp  ACT_CPU.h  ACT_CPU_MT.h  ACT_MLX.cpp  ACT_MLX.h  ACT_MLX_MT.h  ACT_SIMD.cpp  ACT_SIMD.h  ACT_SIMD_MultiThreaded.cpp  ACT_SIMD_MultiThreaded.h  ACT_multithreaded.cpp  ACT_multithreaded.h  Makefile  Makefile.cuda  README.md  README_CUDA.md  act_numeric.h  act_types.h  eeg_act_analyzer.cpp  profile_act.cpp  profile_act_SIMD_MultiThreaded.cpp  profile_act_mt.cpp  ring_buffer.h  server.py  test_act.cpp  test_act_accel.cpp  test_act_cpu.cpp  test_act_cpu_mt.cpp  test_act_mlx.cpp  test_act_synthetic.cpp  test_act_synthetic_mt.cpp  (+11 more)
actlib/include/: ACT_CPU_MT.h  ACT_CUDA_TK.h  ACT_MLX.h  ACT_MLX_MT.h  ACT_cuBLAS.h
actlib/lib/alglib/alglib-cpp/: manual.cpp.html
actlib/lib/alglib/alglib-cpp/src/: alglibinternal.h  alglibmisc.h  dataanalysis.h  diffequations.cpp  diffequations.h  integration.cpp  interpolation.cpp  kernels_avx2.cpp  kernels_fma.cpp  kernels_fma.h  kernels_sse2.h  linalg.h  optimization.h  specialfunctions.cpp
actlib/lib/alglib/alglib-cpp/tests/: test_i.cpp
actlib/src/: ACT_CPU.cpp  ACT_CUDA_TK.cu  ACT_MLX.cpp  ACT_cuBLAS.cpp
actlib/test/: profile_act.cpp  profile_act_mt.cpp  profile_cublas.cpp  profile_tk.cpp  test_act.cpp  test_act_challenging.cpp  test_act_cpu.cpp  test_act_cpu_f.cpp  test_act_cpu_f.d  test_act_cpu_mt.cpp  test_act_cpu_mt.d  test_act_cublas.cpp  test_act_synthetic.d  test_act_tk.cpp  test_dict_io.cpp
alglib/alglib-cpp/src/: alglibinternal.cpp  alglibmisc.cpp  ap.cpp  ap.h  dataanalysis.cpp  fasttransforms.cpp  fasttransforms.h  integration.h  interpolation.h  kernels_avx2.h  kernels_sse2.cpp  linalg.cpp  solvers.cpp  solvers.h  specialfunctions.h  statistics.cpp  statistics.h
apps/eeg_act_analyzer/lib/logging/: ndjson_logger.h
apps/eeg_act_analyzer/src/: eeg_act_analyzer.cpp  muse_osc_receiver.cpp  muse_osc_receiver.h
docs/: EEG_ACT_JSON_FORMAT.md
p5js/: chirplet_audio.js  index.html  sketch.js
python/: .gitignore  TF_samples.py  debug_params.json  debug_signal.txt  label_map_sleep.json  rbf_model.pkl  requirements.txt  visualize_eeg_gamma.py
python/act_bindings/: CMakeLists.txt  pyproject.toml
python/act_bindings/pyact/: __init__.py
python/act_bindings/rbf/: __init__.py
python/act_bindings/src/: mpem_module.cpp
python/act_bindings/tests/: test_act_like.py  test_backend_perf.py  test_invalid_ranges.py
python/act_mlp/: __init__.py  act_dict_io.py  datasets.py  feature_extractor.py  model.py  train.py
python/rbf/: __init__.py  rbf_train.py
python/rbf/tests/: test_e2e_rbf_train.py
scripts/: build_pyact_mlx.sh  setup_mlx.sh  setup_mlx_cuda.sh  setup_mlx_cuda_collab.sh
visualizer/: requirements.txt
web_apps/: package-lock.json  package.json  server.js
web_apps/p5js/: chirplet_audio.js  live.html  live_sketch.js  sketch.js
