[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.10",
  "numpy>=1.24",
  "setuptools",
  "wheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "pyact"
version = "0.1.0"
description = "PyACT: Python bindings for Adaptive Chirplet Transform (MP-BFGS)"
authors = [{ name = "ACT", email = "devnull@example.com" }]
requires-python = ">=3.9"

[project.optional-dependencies]
develop = ["pytest", "numpy"]

[tool.scikit-build]

[tool.scikit-build.cmake]
minimum-version = "3.20"
build-type = "Release"

[tool.cmake]
build-type = "Release"

[tool.scikit-build.wheel]
expand-macos-universal-tags = true
packages = ["pyact"]

[tool.scikit-build.sdist]
include = [
  "src/**",
  "CMakeLists.txt",
  "pyact/**",
]
